# nreduce

gridxslt/: .cvsignore  Makefile.am  autoclean.sh  configure.in  gencov  runalltests  saxontest  xslt.elc  xsltnotes.lyx
gridxslt/dataflow/: .cvsignore  Engine.cpp  Makefile.am  Optimization.cpp  Program.cpp  Program.h  SequenceType.cpp  SequenceType.h  Serialization.cpp  Serialization.h  Validity.cpp  Validity.h  dataflow.c  dataflow.h  engine.c  engine.h  functions.c  functions.h  funops.pl  funops.txt  optimization.c  optimization.h  sequencetype.c  sequencetype.h  serialization.c  serialization.h  validity.c  validity.h
gridxslt/devtrack/: build.sh  examinesource.xsl  examinespec.xsl  examinestructures.xsl  genindex.xsl  genstatus.xsl  mergeimpl.xsl  rfc2xml.pl  script.js  style.css  update.sh  util.xsl  vars  webupdate.sh
gridxslt/http/: .cvsignore  HTTP.cpp  HTTP.h  Handlers.cpp  Handlers.h  Makefile.am  Message.cpp  Message.h  handlers.c  handlers.h  http.c  impl.txt  message.c  message.h
gridxslt/lambda/: .cvsignore  Functions.cpp  Makefile.am  Reducer.cpp  Reducer.h  grammar.y  lambda.cpp  lexer.l  mkflash.pl
gridxslt/newtests/: attributetest1.test  attributetest2.test  content2.test  foreach1.test  foreach2.test  if.test  indent1.test  number.test  opadd.test  range.test  sequence.test  strip.test
gridxslt/src/: .cvsignore  Makefile.am  SaxonServlet.java  asm.c  binencode.cpp  buffertest.c  buffertest.cpp  cbpel.c  client.c  client.cpp  create.c  fsm.c  fsm.h  fsxml.c  gridxslt.c  gridxslt_impl.c  gridxslt_impl.cpp  matrix.c  runtests.c  runtests.cpp  saxonclient.c  saxonclient.cpp  syntax_bpel.c  syntax_bpel.h  syntax_wsdl.c  syntax_wsdl.cpp  syntax_wsdl.h  test.cpp  transfer.c  transfer.cpp  validate.c  wsclient.c  wsclient.cpp  wsjava.c
gridxslt/test/: all.xl  allout.xsl
gridxslt/util/: BinaryArray.cpp  BinaryArray.h  Debug.cpp  Debug.h  List.cpp  List.h  Makefile.am  Namespace.cpp  Namespace.h  Network.cpp  Node.cpp  Node.h  Shared.h  String.cpp  String.h  XMLUtils.cpp  XMLUtils.h  debug.c  debug.h  list.c  list.h  macros.h  namespace.c  namespace.h  network.c  network.h  stringbuf.c  stringbuf.h  xmlutils.c  xmlutils.h
gridxslt/xmlschema/: .cvsignore  Derivation.cpp  Derivation.h  Makefile.am  Output.cpp  Output.h  Parse.cpp  Parse.h  Validation.cpp  Validation.h  XMLSchema.cpp  XMLSchema.h  binxml.c  binxml_impl.c  binxml_impl.cpp  derivation.c  derivation.h  genbindings.c  genbindings.cpp  genbindings_impl.c  genbindings_impl.cpp  impl.txt  output.c  output.h  parse.c  parse.h  testxmlschema.c  testxmlschema_impl.c  testxmlschema_impl.cpp  validation.c  validation.h  xmlschema.c  xmlschema.h
gridxslt/xslt/: .cvsignore  Accessor.cpp  Boolean.cpp  Builtins.cpp  Builtins.h  Compilation.cpp  Compilation.h  ELC.cpp  Expression.cpp  Expression.h  Makefile.am  Node.cpp  Numeric.cpp  Output.cpp  Output.h  Parse.cpp  Parse.h  Sequence.cpp  Special.cpp  Special.h  Statement.cpp  Statement.h  String.cpp  TypeConversion.cpp  TypeConversion.h  accessor.c  boolean.c  builtins.c  builtins.h  compile.c  compile.h  context.c  dftest.c  grammar.y  impl.txt  lexer.l  node.c  numeric.c  output.c  output.h  (+17 more)
lite/compiler/: Makefile.am  debug.c  grammar.y  lifting.c  source.c  source.h  super.c  util.c  util.h
lite_FFI/: configure.in
lite_FFI/CodeGenerator/: CodeGen.java  CodeWritter.java  DefinitionReader.java  zzip_def.txt
lite_FFI/Code_Generator/: CodeGenerator.java  TypeConverter.java  XSLTProcessor.java
lite_FFI/compiler/: grammar.y  lexer.l  lifting.c  renaming.c  resolve.c  source.c  source.h  super.c  util.c  util.h
lite_FFI/modules/: convert_modules  imagemagick.elc  prelude.elc
lite_FFI/runtime/: Makefile.am  builtins.c  builtins.h  extfuncs.c  extfuncs.h  memory.c  reduction.c  runtime.h  task.c
lite_FFI/samples/: draw.elc  example_zzip_read.elc  example_zzip_read.scm  example_zzip_read_dirent.elc  example_zzip_read_dirent.scm  fac.elc  image.elc  life.elc  qsort.elc  qsort_pk.scm  qsort_v0.elc  random_num.scm  test1_pk.scm  test2_pk.scm  test3_pk.scm
lite_FFI/src/: nreduce.c  nreduce.h
nreduce/: Makefile.am  TODO  autogen.sh  chordplot  clearoutput  configure.in  dotestasm  doxygen.cfg  elc-mode.el  nreduce.ncb  nreduce.sln  nreduce.vcproj  plan.html  quadterm  test.asm  tests  timing  tracetopdf  xslt
nreduce/benchmark/: Makefile  ProcessResults.java  bintree.c  bintree.pl  mandelbrot.c  mandelbrot.elc  mandelbrot.java  mandelbrot.js  mandelbrot.pl  mandelbrot.py  matmult2.java  matmultd.c  matmultd.java  matmulti.c  matmulti.java  mergesort.c  mergesort.java  mergesort.js  mergesort.pl  mergesort.py  mergesort2.java  mergesort_inplace.c  mergesort_inplace.java  mergesort_inplace.js  mergesort_inplace.pl  mergesort_inplace.py  nfib.c  nfib.elc  nfib.java  nfib.pl  nfib.py  nsieve.c  nsieve.elc  nsieve.java  nsieve.pl  nsieve.py  nsieve2.py  quicksort.elc  quicksort.js  quicksort2.java  (+5 more)
nreduce/compiler/: Makefile.am  appendopt.c  bytecode.c  bytecode.h  debug.c  gcode.c  gcode.h  grammar.y  graph.c  inlining.c  lexer.l  lifting.c  renaming.c  reorder.c  resolve.c  sinking.c  source.c  source.h  strictness.c  super.c  util.c  util.h
nreduce/cxslt/: Makefile.am  analyse.c  compile.c  cxslt.c  cxslt.h  getoutput  grammar.y  gridxslt  lexer.l  oldelc.cpp  rules.c  runsaxontests  tests  tree.c  wsdl.c  xmlutil.c  xslt.elc  xslt.h
nreduce/ds/: Makefile.am  ds.h  grammar.y  latex.c  lexer.l  process.c  support.c  wrapper.lyx  xpath.ds
nreduce/exp/: Makefile.am
nreduce/java/: Makefile.am
nreduce/modules/: Makefile.am  http.elc  http.l  prelude.elc  preprocess.elc  util.elc  xml.elc  xq.elc  xslt.elc
nreduce/network/: Makefile.am  connection.c  console.c  iothread.c  malloc.c  malloc.h  messages.c  messages.h  netprivate.h  netutil.c  node.c  node.h  notify.c  send.c  util.c  util.h
nreduce/notes/: distheap.lyx  partial_evaluation.lyx  userguide.lyx
nreduce/runtime/: Makefile.am  assembler.c  assembler.h  builtins.c  checkmemory.c  chord.c  chord.h  client.c  console.c  console2.c  data.c  events.c  events.h  gmachine.c  graph.c  (+24 more)
(+3882 files in other folders)
