AC_INIT(src/gridxslt.cpp)
AM_INIT_AUTOMAKE(gridxslt, 0.1)
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AM_PATH_XML2
LIBCURL_CHECK_CONFIG

ALL_LIBS="-lm $XML_LIBS $LIBCURL -lcurl"
ALL_INCLUDES="$XML_CPPFLAGS $LIBCURL_CPPFLAGS"
#ALL_INCLUDES="$XML_CPPFLAGS $LIBCURL_CPPFLAGS -Wall -O3"
AC_SUBST(ALL_LIBS)
AC_SUBST(ALL_INCLUDES)
#CPPFLAGS="-g -Wall -O0 -pg"
#CPPFLAGS="-g -Wall -O0 -fprofile-arcs -ftest-coverage"
CPPFLAGS="-g -Wall -O0"
#CPPFLAGS="-O3"
CFLAGS=$CPPFLAGS
CXXFLAGS=$CPPFLAGS

AC_OUTPUT(Makefile util/Makefile http/Makefile xmlschema/Makefile dataflow/Makefile xslt/Makefile lambda/Makefile src/Makefile)
