AC_INIT(src/nreduce.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(nreduce, 0.1)

AC_PROG_LEX
if test "$LEX" != flex; then
  AC_MSG_ERROR([You must install flex to compile this program. See http://flex.sourceforge.net/])
fi

AC_PROG_YACC
if test "$YACC" != "bison -y"; then
  AC_MSG_ERROR([You must install bison to compile this program. See http://www.gnu.org/software/bison/])
fi

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_MSG_CHECKING([for yylex_destroy])
echo -e "%%\n%%" > conftest.l
flex conftest.l
if grep yylex_destroy > /dev/null lex.yy.c
then
  AC_MSG_RESULT([yes])
  AC_DEFINE([HAVE_YYLEX_DESTROY],[1],[Whether or not flex generates the yylex_destroy function])
else
  AC_MSG_RESULT([no])
fi
rm -f conftest.l lex.yy.c

ALL_LIBS="-lm"
AC_SUBST(ALL_LIBS)
CFLAGS="-g -Wall -O0"
#CFLAGS="-g -Wall -O0 -pg"

AC_OUTPUT(Makefile src/Makefile)
