AC_INIT(src/nreduce.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(nreduce, 0.1)

#AC_PROG_LEX
#if test "$LEX" != flex; then
#  AC_MSG_ERROR([You must install flex to compile this program. See http://flex.sourceforge.net/])
#fi

#AC_PROG_YACC
#if test "$YACC" != "bison -y"; then
#  AC_MSG_ERROR([You must install bison to compile this program. See http://www.gnu.org/software/bison/])
#fi

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_CHECK_LIB(m,sqrt)
AC_CHECK_FUNCS(feenableexcept gethostbyname_r)
AC_CHECK_HEADERS(execinfo.h)
#AC_CHECK_MEMBER(mcontext_t.gregs,AC_DEFINE(HAVE_MCONTEXT_GREGS),,[#include <ucontext.h>])
#AC_CHECK_MEMBERS(mcontext_t.gregs,,,[INCLUDES="#include <ucontext.h>"])
ucontext_includes="\
#include <ucontext.h>
"
AC_CHECK_MEMBERS([mcontext_t.gregs],,,[$ucontext_includes])

AC_MSG_CHECKING([for yylex_destroy])
echo "%%" > conftest.l
echo "%%" >> conftest.l
flex conftest.l
if grep yylex_destroy > /dev/null lex.yy.c
then
  AC_MSG_RESULT([yes])
  AC_DEFINE([HAVE_YYLEX_DESTROY],[1],[Whether or not flex generates the yylex_destroy function])
else
  AC_MSG_RESULT([no])
fi
rm -f conftest.l lex.yy.c

ALL_LIBS="-lpthread -lxml2"
ALL_INCLUDES=""
AC_SUBST(ALL_LIBS)
LDFLAGS="-rdynamic"

######################### COMPILE OPTIONS ##########################

# Normal compilation mode to use during development; include debug info but no optimization
CFLAGS="-ggdb3 -Wall -O0"

# Max. optimizations, for performance testing
#CFLAGS="-ggdb3 -Wall -O3 -fno-strict-aliasing -DNDEBUG"

# For gprof
#CFLAGS="-ggdb3 -Wall -O0 -pg"

# For gcov
#CFLAGS="-ggdb3 -Wall -O0 -fprofile-arcs -ftest-coverage"

# Hide some warnings that icc gives
if $CC --version | grep '^icc '; then
  CFLAGS="$CFLAGS -wd279,1418,1419,869,1684,1572,193,111,810"
fi

AC_OUTPUT(Makefile src/Makefile modules/Makefile cxslt/Makefile ds/Makefile compiler/Makefile runtime/Makefile network/Makefile java/Makefile java/nreduce/Makefile exp/Makefile exp/sockmsg/Makefile exp/pingpong/Makefile exp/httpserver/Makefile)
