noinst_LTLIBRARIES = libutil.la
libutil_la_SOURCES = XMLUtils.cpp List.cpp stringbuf.c debug.c Namespace.cpp network.c String.cpp
LDADD = @ALL_LIBS@
gridxsltincludedir = $(includedir)/gridxslt
noinst_HEADERS = macros.h XMLUtils.h List.h stringbuf.h debug.h Namespace.h network.h String.h Shared.h
INCLUDES = -I@top_srcdir@ @ALL_INCLUDES@

