noinst_LTLIBRARIES = libutil.la
libutil_la_SOURCES = XMLUtils.cpp List.cpp Debug.cpp Namespace.cpp Network.cpp String.cpp
LDADD = @ALL_LIBS@
gridxsltincludedir = $(includedir)/gridxslt
noinst_HEADERS = Macros.h XMLUtils.h List.h Debug.h Namespace.h Network.h String.h Shared.h
INCLUDES = -I@top_srcdir@ @ALL_INCLUDES@

