LDADD = ../libnreduce.la @ALL_LIBS@
noinst_PROGRAMS = nreduce replay #testasm
noinst_HEADERS = nreduce.h
nreduce_SOURCES = nreduce.c
nreduce_LDFLAGS = -static
replay_SOURCES = replay.c
replay_LDFLAGS = -static
#testasm_SOURCES = testasm.c
#testasm_LDFLAGS = -static

CLEANFILES = *.da *.bb *.bbg *.gcov
