BUILT_SOURCES = Bridge.class CommandException.class Holder.class Parser.class Test.class
CLEANFILES = *.class

Bridge.class: Bridge.java
	javac -cp .. Bridge.java

CommandException.class: CommandException.java
	javac -cp .. CommandException.java

Holder.class: Holder.java
	javac -cp .. Holder.java

Parser.class: Parser.java
	javac -cp .. Parser.java

Test.class: Test.java
	javac -cp .. Test.java
